--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -26,7 +26,7 @@
       if (url && url.length > 1) {
         url = decodeURIComponent(url[1]);
       } else {
-        url = "http://petstore.swagger.io/v2/swagger.json";
+        url = "https://s3-us-west-2.amazonaws.com/api-swagger/conversations.json";
       }
       window.swaggerUi = new SwaggerUi({
         url: url,
